[package]
name = "powermonitoring-firmware"
version = "0.1.0"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

stm32f4 = { version = "0.9.0", features = ["rt", "stm32f429"] }
stm32f4xx-hal = { path = "./crates/stm32f4xx-hal", features = ["rt", "stm32f429"] }

panic-abort = { version = "0.3.1" }

cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
embedded-hal = { path = "./crates/embedded-hal", features = ["unproven"] }
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.3"

core = { package = "core-futures-tls", path = "./crates/core-futures-tls" }
pin-utils = "0.1.0-alpha.4"

memchr = { version = "2.0.1", default-features = false }

[dependencies.futures-core]
version = "0.3.1"
default-features = false

[dependencies.futures-util]
version = "0.3.1"
default-features = false

[patch.crates-io]
embedded-hal = { path = "./crates/embedded-hal", features = ["unproven"] }
stm32f4xx-hal = { path = "./crates/stm32f4xx-hal", features = ["rt", "stm32f429"] }
